feat: fix build configs